[ENV_DEV] fix impressum && team text height on mobile

--- a/src/styles/fullpage/fullpage.scss
+++ b/src/styles/fullpage/fullpage.scss
@@ -321,6 +321,8 @@ $secondaryColor: #373737;
           .description {
             width: 70%;
             padding-left: 15%;
+            height: auto;
+            min-height: 200px;
           }
         }
       }
