--- a/src/styles/impressum/impressum.scss
+++ b/src/styles/impressum/impressum.scss
@@ -3,7 +3,7 @@
   display: flex;
 
   justify-content: center;
-  align-items: center;
+  // align-items: center;
 
   div {
     width: 50%;
